--- a/04C-Visualizing the distribution of a dataset.tex
+++ b/04C-Visualizing the distribution of a dataset.tex
@@ -4,26 +4,60 @@
 \usepackage{graphicx}
 
 \begin{document}
-\section{Plotting bivariate distributions}
+\section{Plotting Bivariate Bistributions}
 \begin{frame}[fragile]
-It can also be useful to visualize a bivariate distribution of two variables. The easiest way to do this in seaborn is to just the \texttt{jointplot()} function, which creates a multi-panel figure that shows both the bivariate (or joint) relationship between two variables along with the univariate (or marginal) distribution of each on separate axes.
+\large
+\noindent \textbf{Plotting Bivariate Bistributions}
+
+	\begin{itemize}
+\item It can also be useful to visualize a bivariate distribution of two variables. 
+\item The easiest way to do this in seaborn is to just the \texttt{jointplot()} function, which creates a multi-panel figure that shows both the bivariate (or joint) relationship between two variables along with the univariate (or marginal) distribution of each on separate axes.
+	\end{itemize}
+
+
+\end{frame}
+%==============================================================%
+
+\begin{frame}[fragile]
+	\frametitle{Seaborn Workshop}
+	\large
+\begin{framed}
 \begin{verbatim}
 mean, cov = [0, 1], [(1, .5), (.5, 1)]
-data = np.random.multivariate_normal(mean, cov, 200)
+
+data = np.random.multivariate_normal(mean, 
+       cov, 200)
+
 df = pd.DataFrame(data, columns=["x", "y"])
 \end{verbatim}
+\end{framed}
 
 \end{frame}
 %==============================================================%
 \section{Scatterplots}
 \begin{frame}[fragile]
-The most familiar way to visualize a bivariate distribution is a scatterplot, where each observation is shown with point at the x and y values. This is analgous to a rug plot on two dimensions. You can draw a scatterplot with the matplotlib plt.scatter function, and it is also the default kind of plot shown by the \texttt{jointplot()} function:
+	\large
+	\begin{itemize}
+\item The most familiar way to visualize a bivariate distribution is a scatterplot, where each observation is shown with point at the x and y values. 
+\item This is analgous to a rug plot on two dimensions. 
+\item You can draw a scatterplot with the matplotlib \texttt{plt.scatter} function, and it is also the default kind of plot shown by the \texttt{jointplot()} function:
+	\end{itemize}
+
+
+\end{frame}
+
+%===========================================================%
+\begin{frame}[fragile]
+	\frametitle{Seaborn Workshop}
+	\large
+	\begin{framed}
 \begin{verbatim}
 sns.jointplot(x="x", y="y", data=df);
 \end{verbatim}
+\end{framed}
 \begin{figure}
 \centering
-\includegraphics[width=0.7\linewidth]{images/distributions_30_0}
+\includegraphics[width=0.55\linewidth]{images/distributions_30_0}
 \end{figure}
 
 \end{frame}
@@ -33,7 +67,8 @@ sns.jointplot(x="x", y="y", data=df);
 \noindent \textbf{Hexbin plots}
 \begin{itemize}
 \item The bivariate analogue of a histogram is known as a “hexbin” plot, because it shows the counts of observations that fall within hexagonal bins. \item This plot works best with relatively large datasets. 
-\item It’s availible through the matplotlib \texttt{plt.hexbin} function and as a style in \texttt{jointplot()}. It looks best with a white background:
+\item It’s availible through the matplotlib \texttt{plt.hexbin} function and as a style in \texttt{jointplot()}. 
+\item It looks best with a white background:
 \end{itemize}
 
 \end{frame}
@@ -58,20 +93,32 @@ sns.jointplot(x=x, y=y, kind="hex", color="k");
 \large
 \begin{itemize}
 \item It is also posible to use the kernel density estimation procedure described above to visualize a bivariate distribution. 
-\item In seaborn, this kind of plot is shown with a contour plot and is available as a style in jointplot():
+\item In seaborn, this kind of plot is shown with a contour plot and is available as a style in \texttt{jointplot()}:
 \end{itemize}
 
-
+\end{frame}
+%===========================================================%
+\begin{frame}[fragile]
+\frametitle{Seaborn Workshop}
+\large
+	\begin{framed}
 \begin{verbatim}
 sns.jointplot(x="x", y="y", data=df, kind="kde");
 \end{verbatim}
-
+\end{framed}
 \begin{figure}
 \centering
-\includegraphics[width=0.7\linewidth]{images/distributions_34_0}
+\includegraphics[width=0.55\linewidth]{images/distributions_34_0}
 \end{figure}
-
-You can also draw a two-dimensional kernel density plot with the \texttt{kdeplot()} function. This allows you to draw this kind of plot onto a specific (and possibly already existing) matplotlib axes, whereas the \texttt{jointplot()} function manages its own figure:
+\end{frame}
+%===========================================================%
+\begin{frame}[fragile]
+\frametitle{Seaborn Workshop}
+\large
+	\begin{itemize}
+\item You can also draw a two-dimensional kernel density plot with the \texttt{kdeplot()} function.
+\item  This allows you to draw this kind of plot onto a specific (and possibly already existing) matplotlib axes, whereas the \texttt{jointplot()} function manages its own figure:
+\end{itemize}
 \end{frame}
 %===========================================================%
 \begin{frame}[fragile]
@@ -85,7 +132,7 @@ sns.rugplot(df.y, vertical=True, ax=ax);
 \end{framed}
 \begin{figure}
 \centering
-\includegraphics[width=0.7\linewidth]{images/distributions_36_0}
+\includegraphics[width=0.55\linewidth]{images/distributions_36_0}
 \end{figure}
 
 \end{frame}
@@ -105,26 +152,49 @@ sns.kdeplot(df.x, df.y, cmap=cmap, n_levels=60, shade=True);
 	\large
 \begin{figure}
 \centering
-\includegraphics[width=0.7\linewidth]{images/distributions_38_0}
-\caption{}
-\label{fig:distributions_38_0}
+\includegraphics[width=0.55\linewidth]{images/distributions_38_0}
 \end{figure}
 
 
 \end{frame}
 %===========================================================%
 \begin{frame}[fragile]
-	\large
-The \texttt{jointplot()} function uses a \texttt{JointGrid} to manage the figure. For more flexibility, you may want to draw your figure by using JointGrid directly. \texttt{jointplot()} returns the JointGrid object after plotting, which you can use to add more layers or to tweak other aspects of the visualization:
+\frametitle{Seaborn Workshop}
+\large
+	\begin{itemize}
+\item The \texttt{jointplot()} function uses a \texttt{JointGrid} to manage the figure. \bigskip
+\item For more flexibility, you may want to draw your figure by using \texttt{JointGrid} directly. \bigskip
+\item  \texttt{jointplot()} returns the \texttt{JointGrid} object after plotting, which you can use to add more layers or to tweak other aspects of the visualization:
+	\end{itemize}
+
+
+
+
+\end{frame}
+%===========================================================%
+\begin{frame}[fragile]
+\frametitle{Seaborn Workshop}	\large
+	
+\begin{framed}
 \begin{verbatim}
-g = sns.jointplot(x="x", y="y", data=df, kind="kde", color="m")
-g.plot_joint(plt.scatter, c="w", s=30, linewidth=1, marker="+")
+g = sns.jointplot(x="x", y="y", 
+    data=df, kind="kde", color="m")
+    
+g.plot_joint(plt.scatter, c="w", 
+    s=30, linewidth=1, marker="+")
+    
 g.ax_joint.collections[0].set_alpha(0)
+
 g.set_axis_labels("$X$", "$Y$");
 \end{verbatim}
-\begin{figure}
+\end{framed}
+\end{frame}
+%===========================================================%
+\begin{frame}[fragile]
+	\large
+	\begin{figure}
 \centering
-\includegraphics[width=0.7\linewidth]{images/distributions_40_0}
+\includegraphics[width=0.55\linewidth]{images/distributions_40_0}
 \end{figure}
 
 
